<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:background="#fff">

    <RelativeLayout
        android:id="@+id/drupalLogoImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/header" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Drupal Issue Tracker"
                android:textColor="#ffffff"
                android:textSize="20dip" />
        </RelativeLayout>

        <EditText
            android:id="@+id/editLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/drupalLogoImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:hint="@string/hint_login"
            android:inputType="text|textNoSuggestions" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:hint="@string/hint_pw"
            android:inputType="textNoSuggestions|textPassword" />

        <ImageView
            android:id="@+id/drupalLogoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editPassword"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtLoggedInAs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="TextView"
                android:textColor="#008000"
                android:textSize="15dip"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:autoText="true"
                android:inputType="textNoSuggestions"
                android:text="@string/login" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/setting_notify"
                android:textColor="#333333" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/linearLayout1"
            android:layout_below="@+id/linearLayout1"
            android:layout_toRightOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/spinner1"
            android:layout_alignLeft="@+id/linearLayout1"
            android:layout_marginRight="10dip"
            android:text="@string/interval"
            android:textColor="#333333"
            android:textSize="16dip" />
    </RelativeLayout>

</ScrollView>