<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@drawable/header" >

        <TextView
            android:id="@+id/txtIssueNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:text="Issue #123123"
            android:textColor="#ffffff"
            android:textSize="20dip" />

      

        <Button
            android:id="@+id/button1"
            android:layout_width="100dip"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/progressBar2"
            android:background="@drawable/button_header"
            android:enabled="false"
            android:text="@string/loading_header"
            android:textColor="#fff"
            android:textSize="14dip" android:layout_alignParentRight="true"/>

          <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" android:paddingRight="5dip"/>
          
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button1"
            android:layout_alignParentTop="true"
            android:src="@drawable/header_divider" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="vertical">

            <TextView
                android:id="@+id/txtYouAreFollowing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_are_following"
                android:textColor="#008000"
                android:textSize="14dip"
                android:textStyle="bold" android:paddingLeft="5dip" android:paddingRight="5dip" android:paddingTop="5dip" android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" android:paddingLeft="5dip" android:paddingRight="5dip" android:paddingTop="5dip">

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#dddddd"
                android:orientation="vertical"
                android:padding="5dip"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/txtAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="#333333"
                    android:textSize="14dip"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" android:paddingBottom="5dip" android:paddingLeft="5dip" android:paddingRight="5dip">

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Summary"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="#333333"
                    android:textSize="14dip" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#333"
                android:orientation="vertical" >
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip" android:background="#eeeeee">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#333" android:textSize="14dip" android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView2"
                    android:layout_alignBottom="@+id/textView2"
                    android:layout_toRightOf="@+id/textView2"
                    android:text="5555 followers"
                    android:textColor="#333333"
                    android:textSize="14dip" android:layout_marginLeft="5dip"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#333"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" android:background="#eeeeee">

                <WebView
                    android:id="@+id/webViewComments"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/loadingContainer"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

    </RelativeLayout>

</LinearLayout>